--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.32.0",
+    "eslint-config-xo": "^0.43.1",
+    "husky": "^8.0.3",
     "sass": "^1.57.1"
   }
 }
